finish html header and footer

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,42 @@
 
 <body>
   <header class="header">
+    <div class="header__container container">
+      <a class="header__logo logo" href="#">EgyptTour</a>
 
+      <form class="header__search-form search-form" action="#">
+        <button class="search-form__button" type="submit">
+          <span class="sr-only">search-form button</span>
+          <span class="search-form__search-icon"></span>
+        </button>
+
+        <input class="search-form__input" type="text">
+      </form>
+
+      <ul class="header__nav-list">
+        <li class="header__nav-item">
+          <a class="header__nav-link" href="#">Home</a>
+        </li>
+
+        <li class="header__nav-item">
+          <a class="header__nav-link" href="#">Guides</a>
+        </li>
+
+        <li class="header__nav-item">
+          <a class="header__nav-link" href="#">About</a>
+        </li>
+
+        <li class="header__nav-item">
+          <a class="header__nav-link" href="#">Inspiration</a>
+        </li>
+
+        <li class="header__nav-item">
+          <a class="header__nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+
+      <button class="header__button" type="submit">Sign Up</button>
+    </div>
   </header>
 
   <main class="main-content">
@@ -20,7 +55,112 @@
   </main>
 
   <footer class="footer">
+    <div class="footer__container container">
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a class="footer__logo logo" href="#">EgyptTour</a>
 
+          <p class="footer__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+            officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        </li>
+
+        <li class="footer__item">
+          <h3 class="footer__list-title">Useful Links</h3>
+
+          <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">About</a>
+            </li>
+
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Guide</a>
+            </li>
+
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Inspiration</a>
+            </li>
+
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="footer__item">
+          <h3 class="footer__list-title">Resources</h3>
+
+          <ul class="footer__nav-list">
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Become a guide</a>
+            </li>
+
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Legal</a>
+            </li>
+
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Blog</a>
+            </li>
+
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Help</a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="footer__item">
+          <h3 class="footer__list-title">Contact Us</h3>
+
+          <ul class="footer__contact-list">
+            <li class="footer__contact-item">
+              <a class="footer__contact-link" href="mailto:infomail@gmail.com">infomail@gmail.com</a>
+            </li>
+
+            <li class="footer__contact-item">
+              <a class="footer__contact-link" href="https://goo.gl/maps/RCKyVfPxgZypPbzM8">48 Street Road, Cairo</a>
+            </li>
+          </ul>
+
+          <ul class="footer__social-list">
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
+                <span class="footer__social-icon" style="background-image: url('images/sprite.svg#facebook');"></span>
+                <span class="sr-only">link to our facebook page</span>
+              </a>
+            </li>
+
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
+                <span class="footer__social-icon" style="background-image: url('images/sprite.svg#twitter');"></span>
+                <span class="sr-only">link to our twitter page</span>
+              </a>
+            </li>
+
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
+                <span class="footer__social-icon" style="background-image: url('images/sprite.svg#instagram');"></span>
+                <span class="sr-only">link to our instagram page</span>
+              </a>
+            </li>
+
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
+                <span class="footer__social-icon" style="background-image: url('images/sprite.svg#linkedin');"></span>
+                <span class="sr-only">link to our linkedin page</span>
+              </a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+
+      <div class="footer__cottom">
+        <span class="footer__copyright">© 2022 EgyptTour</span>
+
+        <a class="footer__link" href="#">Privacy Policy</a>
+
+        <a class="footer__link" href="#">Term of Condition</a>
+      </div>
+    </div>
   </footer>
 
   <script src="js/main.min.js"></script>
