--- a/app/index.html
+++ b/app/index.html
@@ -179,6 +179,207 @@
         </div>
       </div>
     </section>
+
+    <section class="guide-card">
+      <div class="guide-card__container container">
+        <div class="guide-card__top">
+          <h2 class="guide-card__subtitle subtitle">Guides for you!</h2>
+
+          <button class="guide-card__button button" type="button">See All Guides</button>
+        </div>
+
+        <ul class="guide-card__list">
+          <li class="guide-card__item">
+            <div class="guide-card__wrapper">
+              <img class="guide-card__img" src="images/sections/guide-card/malik-guide.jpg" alt="Malik's photo">
+            </div>
+
+            <span class="guide-card__name">Abayomi Malik</span>
+
+            <div class="guide-card__rating star" data-rateyo-rating=5 data-rateyo-normal-fill="#F6F6F6"
+              data-rateyo-spacing="6px">
+              <span class="sr-only">guide rating</span>
+            </div>
+
+            <div class="guide-card__reviews">
+              <span class="guide-card__num">1000+</span> reviews
+            </div>
+          </li>
+
+          <li class="guide-card__item">
+            <div class="guide-card__wrapper">
+              <img class="guide-card__img" src="images/sections/guide-card/eman-guide.jpg" alt="Eman's photo">
+            </div>
+
+            <span class="guide-card__name">Berenike Eman</span>
+
+            <div class="guide-card__rating star" data-rateyo-rating=5 data-rateyo-normal-fill="#F6F6F6"
+              data-rateyo-spacing="6px">
+              <span class="sr-only">guide rating</span>
+            </div>
+
+            <div class="guide-card__reviews">
+              <span class="guide-card__num">1000+</span> reviews
+            </div>
+          </li>
+
+          <li class="guide-card__item">
+            <div class="guide-card__wrapper">
+              <img class="guide-card__img" src="images/sections/guide-card/abu-guide.jpg" alt="Abu's photo">
+            </div>
+
+            <span class="guide-card__name">Abu Bakar</span>
+
+            <div class="guide-card__rating star" data-rateyo-rating=5 data-rateyo-normal-fill="#F6F6F6"
+              data-rateyo-spacing="6px">
+              <span class="sr-only">guide rating</span>
+            </div>
+
+            <div class="guide-card__reviews">
+              <span class="guide-card__num">1000+</span> reviews
+            </div>
+          </li>
+
+          <li class="guide-card__item">
+            <div class="guide-card__wrapper">
+              <img class="guide-card__img" src="images/sections/guide-card/dendera-guide.jpg" alt="Dendera's photo">
+            </div>
+
+            <span class="guide-card__name">Dendera Heba</span>
+
+            <div class="guide-card__rating star" data-rateyo-rating=5 data-rateyo-normal-fill="#F6F6F6"
+              data-rateyo-spacing="6px">
+              <span class="sr-only">guide rating</span>
+            </div>
+
+            <div class="guide-card__reviews">
+              <span class="guide-card__num">1000+</span> reviews
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="work-proccess">
+      <div class="work-proccess__container container">
+        <h2 class="work-proccess__subtitle subtitle">How does it Work?</h2>
+
+        <ul class="work-proccess__list">
+          <li class="work-proccess__item">
+            <img class="work-proccess__img" src="images/sections/work-proccess/select-guide.png" width="185"
+              height="311" alt="women are selecting guide">
+
+            <span class="work-proccess__text">Select a Guide</span>
+          </li>
+
+          <li class="work-proccess__item">
+            <img class="work-proccess__img" src="images/sections/work-proccess/contact-guide.png" width="185"
+              height="311" alt="men are contacting guide">
+
+            <span class="work-proccess__text">Contact
+              Guide</span>
+          </li>
+
+          <li class="work-proccess__item">
+            <img class="work-proccess__img" src="images/sections/work-proccess/creat-travel.png" width="185"
+              height="311" alt="women are create travel">
+
+            <span class="work-proccess__text">Create your Travel</span>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="guide-registration general-page">
+      <div class="general-page__container">
+        <div class="general-page__inner">
+          <p class="general-page__text">Be referenced on our site, <span>it's 100% free!</span>
+          </p>
+
+          <div class="general-page__box">
+            <button class="general-page__button button" type="submit">I am a Tourist Guide</button>
+
+            <ul class="general-page__tourists-list">
+              <li class="general-page__tourists-item">
+                <img class="general-page__tourists-img" src="images/sections/guide-registration/client-1.png" width="52" height="52" alt="some client">
+              </li>
+
+              <li class="general-page__tourists-item">
+                <img class="general-page__tourists-img" src="images/sections/guide-registration/client-2.png" width="52"
+                  height="52" alt="some client">
+              </li>
+
+              <li class="general-page__tourists-item">
+                <img class="general-page__tourists-img" src="images/sections/guide-registration/client-3.png" width="52"
+                  height="52" alt="some client">
+              </li>
+
+              <li class="general-page__tourists-item">
+                <img class="general-page__tourists-img" src="images/sections/guide-registration/client-4.png" width="52"
+                  height="52" alt="some client">
+              </li>
+
+              <li class="general-page__tourists-item"><span>1000+</span> tourist join us</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="general-page__wrapper">
+          <div class="general-page__layout general-page__layout--layout-1"
+            style="background-image: url('images/sections/guide-registration/desert-background__layout-1.png');">
+            <h1 class="general-page__title">Find the Best <br> Egyptian Guide</h1>
+          </div>
+
+          <div class="general-page__layout general-page__layout--layout-2"
+            style="background-image: url('images/sections/guide-registration/desert-background__layout-2.png');">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="about-egypt">
+      <div class="about-egypt__container container">
+        <h2 class="about-egypt__subtitle subtitle">Learn more About Egypt</h2>
+
+        <ul class="about-egypt__list">
+          <li class="about-egypt__item">
+            <div class="about-egypt__box">
+              <img class="about-egypt__img" src="images/sections/about-egypt/hotel.jpg" alt="egypt hotels">
+            </div>
+
+            <div class="about-egypt__wrapper">
+              <span class="about-egypt__description">Hotel</span>
+
+              <a class="about-egypt__link" href="#">Where to sleep in Luxor?</a>
+            </div>
+          </li>
+
+          <li class="about-egypt__item about-egypt__item--flex">
+            <div class="about-egypt__box">
+              <img class="about-egypt__img" src="images/sections/about-egypt/restaurant.jpg" alt="egypt restaurant">
+            </div>
+
+            <div class="about-egypt__wrapper">
+              <span class="about-egypt__description">Restaurant</span>
+
+              <a class="about-egypt__link" href="#">5 restaurant in Cairo</a>
+            </div>
+          </li>
+
+          <li class="about-egypt__item about-egypt__item--flex">
+            <div class="about-egypt__box">
+              <img class="about-egypt__img" src="images/sections/about-egypt/advance.jpg" alt="egypt advance">
+            </div>
+
+            <div class="about-egypt__wrapper">
+              <span class="about-egypt__description">Advance & Tip</span>
+
+              <a class="about-egypt__link" href="#">Is Egypt dangerous?</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
